--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shadows",
   "version": "0.1.0",
+  "homepage": "https://gitname.github.io/2d-shadows",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash.throttle": "^4.1.7"
+    "@types/lodash.throttle": "^4.1.7",
+    "gh-pages": "^4.0.0"
   }
 }
